src/main/kotlin/com/example/ggyunispring/error/DiaryNotFoundException.kt
package com.example.ggyunispring.error

/**
 * created by Gyunny 2021/10/02
 */
class DiaryNotFoundException : RuntimeException {
    constructor() : super()
}